# opx

./: .gitignore  Cargo.toml  README.ja.md  README.md  claude  justfile
.github/workflows/: publish.yaml  release.yaml
scripts/: jaeger_trace_compare.py
skills/jaeger-trace-compare/: SKILL.md
skills/jaeger-trace-compare/references/: jaeger-api.md
src/: main.rs  telemetry.rs  telemetry_span.rs
tests/: e2e_real_op.rs
