[package]
name = "opz"
version = "2026.2.4"
edition = "2021"
description = "1Password CLI wrapper for seamless secret injection into commands"
license = "MIT"
repository = "https://github.com/f4ah6o/opz"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
hex = "0.4"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
tempfile = "3.24.0"
