[package]
name = "opz"
version = "2026.2.5"
edition = "2021"
description = "1Password CLI wrapper for seamless secret injection into commands"
license = "MIT"
repository = "https://github.com/f4ah6o/opz"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
hex = "0.4"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = "0.31.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["net", "rt", "rt-multi-thread", "time"] }
